--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
+  "homepage": "https://github.com/mynaur/boutique.github.io.git",
   "name": "myboutique",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "less": "^3.9.0",
     "react": "^16.9.0",
+    "react-app-rewire-less": "^2.1.3",
     "react-dom": "^16.9.0",
+    "react-less-watcher": "^1.1.4",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy":"npm run build ",
+    "deploy":"gh-pages -d build",
+    "watch-less": "react-less-watcher -d src",
+    "start": "react-scripts start&npm run watch-less",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,5 +36,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1",
+    "less-loader": "^5.0.0",
+    "react-app-rewire-less-modules": "^1.3.0",
+    "react-app-rewired": "^2.1.3"
   }
 }
